# deepfake

./: .env.example  .gitignore  README.md  agent.md  analyze_all_videos.py  analyze_new_videos.py  analyze_videos.py  demo.py  diagnose_new_fake.py  diagnose_video.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.yaml  env.example
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COST_ANALYSIS.md  PRD.md  PROMPT_ENGINEERING_LOG.md
notebooks/: research_analysis.ipynb
results/: README.md
skills/: audio_visual_alignment.md  dataset_generalization.md  explainability.md  face_tracking.md  frequency_artifacts.md  identity_reasoning.md  physiological_signals.md  robustness_security.md  temporal_consistency.md
src/: __init__.py  cli.py  detector.py  models.py  utils.py
src/deepfake_detector/: __init__.py  aggregation.py  config.py  detector.py  exceptions.py  extraction.py  parallel.py
src/deepfake_detector/skills/: __init__.py  audio_visual_analyzer.py  frequency_analyzer.py  identity_analyzer.py  physiological_analyzer.py  temporal_analyzer.py  visual_artifact_analyzer.py
src/deepfake_detector/skills/frequency/: __init__.py  analyzer.py  artifacts.py  gan_detection.py
src/deepfake_detector/skills/physiological/: __init__.py  analyzer.py  rppg.py  signal_analysis.py
src/deepfake_detector/skills/temporal/: __init__.py  analyzer.py  blink.py  identity.py  motion.py
src/deepfake_detector/skills/visual_artifacts/: __init__.py  analyzer.py  base.py  color.py  edge.py  motion.py  symmetry.py  texture.py
src/skills/: explainability_engine.py  face_tracker.py  frequency_analyzer.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_integration.py  test_models.py  test_visual_artifacts.py
